# libidevicebackup

./: Makefile.am  configure.ac  libidevicebackup.pc.in
include/: Makefile.am
include/libidevicebackup/: IBKPexception.hpp  libidevicebackup.hpp
libidevicebackup/: IBKPexception.cpp  Makefile.am  libidevicebackup.cpp  main.cpp
libidevicebackup.xcodeproj/: project.pbxproj
